tests/miniJava/neg/001070_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = Main new int [ 0 ] ; } }
